{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 205,
  "lineage": "908313dc-84b2-68c3-542b-be9fdc6acb91",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alb-tga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:198208899300:targetgroup/dcc-alb-tg/d633ef2cfe76a11f-20220719202153285700000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:198208899300:targetgroup/dcc-alb-tg/d633ef2cfe76a11f",
            "target_id": "i-07ce3eaabc57e199a"
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:198208899300:targetgroup/dcc-alb-tg/d633ef2cfe76a11f-20220719202153562500000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:198208899300:targetgroup/dcc-alb-tg/d633ef2cfe76a11f",
            "target_id": "i-041749738abed7469"
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:198208899300:targetgroup/dcc-alb-tg/d633ef2cfe76a11f-20220719202153523400000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:198208899300:targetgroup/dcc-alb-tg/d633ef2cfe76a11f",
            "target_id": "i-0b9d298489a0004f8"
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c3d065756aff7ca",
            "association_id": "eipassoc-00fb5edf3a861050c",
            "domain": "vpc",
            "id": "eipalloc-09c3d065756aff7ca",
            "instance": "i-07ce3eaabc57e199a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03fe8c9edbd861c0b",
            "private_dns": "ip-10-0-0-107.ec2.internal",
            "private_ip": "10.0.0.107",
            "public_dns": "ec2-44-209-16-247.compute-1.amazonaws.com",
            "public_ip": "44.209.16.247",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-0"
            },
            "tags_all": {
              "Name": "eip-0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_security_group.alb-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0974469f5e05c3f2b",
            "association_id": "eipassoc-0627dfa680188a74f",
            "domain": "vpc",
            "id": "eipalloc-0974469f5e05c3f2b",
            "instance": "i-041749738abed7469",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0aad0ddf9ed20de51",
            "private_dns": "ip-10-0-22-155.ec2.internal",
            "private_ip": "10.0.22.155",
            "public_dns": "ec2-3-216-188-95.compute-1.amazonaws.com",
            "public_ip": "3.216.188.95",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-1"
            },
            "tags_all": {
              "Name": "eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_security_group.alb-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e85d95ddccc0f830",
            "association_id": "eipassoc-056d5d66ae8225bd2",
            "domain": "vpc",
            "id": "eipalloc-0e85d95ddccc0f830",
            "instance": "i-0b9d298489a0004f8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-010902f6e4465e843",
            "private_dns": "ip-10-0-35-248.ec2.internal",
            "private_ip": "10.0.35.248",
            "public_dns": "ec2-18-204-81-0.compute-1.amazonaws.com",
            "public_ip": "18.204.81.0",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-2"
            },
            "tags_all": {
              "Name": "eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_security_group.alb-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:198208899300:instance/i-07ce3eaabc57e199a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ce3eaabc57e199a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03fe8c9edbd861c0b",
            "private_dns": "ip-10-0-0-107.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04aed308305b51060",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f74d4b7dc4d9a798"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054bd99258d6bf46e",
            "tags": {
              "Name": "Crash_Server_1"
            },
            "tags_all": {
              "Name": "Crash_Server_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f74d4b7dc4d9a798"
            ]
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:198208899300:instance/i-041749738abed7469",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-041749738abed7469",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aad0ddf9ed20de51",
            "private_dns": "ip-10-0-22-155.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.22.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06682099995bdb203",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f74d4b7dc4d9a798"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d867ffb87e04df39",
            "tags": {
              "Name": "Crash_Server_2"
            },
            "tags_all": {
              "Name": "Crash_Server_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f74d4b7dc4d9a798"
            ]
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:198208899300:instance/i-0b9d298489a0004f8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b9d298489a0004f8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-010902f6e4465e843",
            "private_dns": "ip-10-0-35-248.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.35.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0256e5db6d1472bd7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f74d4b7dc4d9a798"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0676dbffb66ad24c6",
            "tags": {
              "Name": "Crash_Server_3"
            },
            "tags_all": {
              "Name": "Crash_Server_3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f74d4b7dc4d9a798"
            ]
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198208899300:internet-gateway/igw-0e66fd0baa711c06f",
            "id": "igw-0e66fd0baa711c06f",
            "owner_id": "198208899300",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0d304eef8ad57e34c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:198208899300:loadbalancer/app/dcc-alb/9f031a7317fcd14a",
            "arn_suffix": "app/dcc-alb/9f031a7317fcd14a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dcc-alb-1261538386.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:198208899300:loadbalancer/app/dcc-alb/9f031a7317fcd14a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dcc-alb",
            "security_groups": [
              "sg-0f74d4b7dc4d9a798"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-054bd99258d6bf46e"
              },
              {
                "subnet_id": "subnet-0676dbffb66ad24c6"
              },
              {
                "subnet_id": "subnet-0d867ffb87e04df39"
              }
            ],
            "subnets": [
              "subnet-054bd99258d6bf46e",
              "subnet-0676dbffb66ad24c6",
              "subnet-0d867ffb87e04df39"
            ],
            "vpc_id": "vpc-0d304eef8ad57e34c",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:198208899300:listener/app/dcc-alb/9f031a7317fcd14a/7e7f8b0527f5bb01",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:198208899300:targetgroup/dcc-alb-tg/d633ef2cfe76a11f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:198208899300:listener/app/dcc-alb/9f031a7317fcd14a/7e7f8b0527f5bb01",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:198208899300:loadbalancer/app/dcc-alb/9f031a7317fcd14a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:198208899300:targetgroup/dcc-alb-tg/d633ef2cfe76a11f",
            "arn_suffix": "targetgroup/dcc-alb-tg/d633ef2cfe76a11f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:198208899300:targetgroup/dcc-alb-tg/d633ef2cfe76a11f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dcc-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d304eef8ad57e34c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e66fd0baa711c06f",
            "id": "r-rtb-0523e2e09b83b55081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0523e2e09b83b5508",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198208899300:route-table/rtb-0523e2e09b83b5508",
            "id": "rtb-0523e2e09b83b5508",
            "owner_id": "198208899300",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-routetable"
            },
            "tags_all": {
              "Name": "public-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d304eef8ad57e34c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acc518b60ef16394",
            "route_table_id": "rtb-0523e2e09b83b5508",
            "subnet_id": "subnet-054bd99258d6bf46e"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df7c91b520005bed",
            "route_table_id": "rtb-0523e2e09b83b5508",
            "subnet_id": "subnet-0d867ffb87e04df39"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac33d9678eef8507",
            "route_table_id": "rtb-0523e2e09b83b5508",
            "subnet_id": "subnet-0676dbffb66ad24c6"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198208899300:security-group/sg-0f74d4b7dc4d9a798",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for all outgoing traffics",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f74d4b7dc4d9a798",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dcc-sg",
            "name_prefix": "",
            "owner_id": "198208899300",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AWS security group dynamic block"
            },
            "tags_all": {
              "Name": "AWS security group dynamic block"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d304eef8ad57e34c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198208899300:subnet/subnet-054bd99258d6bf46e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054bd99258d6bf46e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "198208899300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-0d304eef8ad57e34c"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198208899300:subnet/subnet-0d867ffb87e04df39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d867ffb87e04df39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "198208899300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0d304eef8ad57e34c"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198208899300:subnet/subnet-0676dbffb66ad24c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0676dbffb66ad24c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "198208899300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0d304eef8ad57e34c"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:198208899300:vpc/vpc-0d304eef8ad57e34c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09d63e0e9341822dd",
            "default_route_table_id": "rtb-01fa6c55bae2d6ba1",
            "default_security_group_id": "sg-0608244e0a9fc49ce",
            "dhcp_options_id": "dopt-096261a70da6148f9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d304eef8ad57e34c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01fa6c55bae2d6ba1",
            "owner_id": "198208899300"
          }
        }
      ]
    }
  ]
}